--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ngrx/store": "^13.2.0",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
     "rxjs": "~7.4.0",
